fix: nav covering heading ,  margins in gallery

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,7 +1,10 @@
 body {
     background-color: #fafafa;
   }
-  
+
+h1 {
+  margin-top: 0.5rem
+}
   .navbar {
     background-color: #aaaaac;
   }
@@ -165,19 +168,20 @@ body {
   }
   
   /* Gallery */
-  
-  .gallery {
-    margin-top: 71px;
-  }
-  
+
   .gallery-navigation {
     background-color: #b2b2b4;
-    height: 45px;
+    height: 45px; 
+    top: 71px;
     padding: 7px;
     text-align: center;
     position: fixed;
     width: 100vw;
     z-index: 1;
+  }
+  
+  .gallery {
+    margin-top: 140px;
   }
   
   .gallery-navigation li {
@@ -201,7 +205,6 @@ body {
     display: flex;
     max-width: 100vw;
     justify-content: center;
-    margin-top: 30px;
   }
   
   .gallery-container img {
@@ -406,9 +409,7 @@ body {
     .gallery-navigation {
       height: 65px;
     }
-    .gallery {
-      margin-top: 65px;
-    }
+
     .package {
       margin: 0 10vw;
     }
